--- a/templates/get_messages_form.html
+++ b/templates/get_messages_form.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
     {% block content %}
+        <span class="text-monospace">SQS URL</span>
         <form action="/get_sqs_messages" method="POST">
             <div class="form-group">
                 <input id="SQS_URL" type="text" class="form-control" name="SQS_URL">
