--- a/templates/get_messages_form.html
+++ b/templates/get_messages_form.html
@@ -1,10 +1,12 @@
 {% extends 'base.html' %}
 {% block content %}
-    <span class="text-monospace">SQS URL</span>
     <form action="/get_sqs_messages" method="POST">
-        <div class="form-group">
-            <input id="SQS_URL" type="text" class="form-control" name="SQS_URL">
-        </div>
-        <button type="submit" class="btn btn-block btn-primary">GET Messages</button>
+      <div class="form-group">
+        <span class="text-monospace">SQS URL</span>
+        <input id="SQS_URL" type="text" class="form-control" name="SQS_URL">
+        <span class="text-monospace">Max Messages To Return:</span>
+        <input id="MAX_MSG" type="text" class="form-control" name="MAX_MSG" value="10">
+      </div>
+      <button type="submit" class="btn btn-block btn-primary">GET Messages</button>
     </form>
 {% endblock %}
