--- a/templates/base.html
+++ b/templates/base.html
@@ -1,29 +1,41 @@
 <!doctype html>
-   <html lang="en">
-     <head>
-         <!-- Required meta tags -->
-       <meta charset="utf-8">
-       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-       <!-- Bootstrap CSS -->
-       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
-       <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
-       <link href="../static/custom.css" rel="stylesheet">
-       <title>SQS Message Retriever</title>
-     </head>
-     <body>
-         <div class="container h-100">
-           <div class="row align-items-center h-100">
-               <div class="col-md-10 col-sm-12 mx-auto">
-                   <div class="h-100 justify-content-center">
-                       {% block content %}  {% endblock %}
-                   </div>
+<html lang="en">
+ <head>
+     <!-- Required meta tags -->
+   <meta charset="utf-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+   <!-- Bootstrap CSS -->
+   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
+   <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+   <link href="../static/custom.css" rel="stylesheet">
+   <title>SQS Message Retriever</title>
+ </head>
+ <body>
+     <div class="container h-100">
+       <div class="row align-items-center h-100">
+           <div class="col-md-10 col-sm-12 mx-auto">
+               <div class="h-100 justify-content-center">
+                   {% block content %}  {% endblock %}
                </div>
            </div>
        </div>
-       <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
-       <script type="text/javascript" src="../static/renderjson-init.js"></script>
-       <script type="text/javascript" src="../static/renderjson.js"></script>
-       <script type="text/javascript" src="../static/custom.js"></script>
-     </body>
-   </html>
+   </div>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
+   <script type="text/javascript" src="../static/renderjson-init.js"></script>
+   <script type="text/javascript" src="../static/renderjson.js"></script>
+   <script type="text/javascript" src="../static/custom.js"></script>
+ </body>
+</html>
+
+{% macro sqs_form() %}
+  <form action="/get_sqs_messages" method="POST">
+    <div class="form-group">
+      <span class="text-monospace">SQS URL</span>
+      <input id="SQS_URL" type="text" class="form-control" name="SQS_URL">
+      <span class="text-monospace">Max Messages To Return:</span>
+      <input id="MAX_MSG" type="text" class="form-control" name="MAX_MSG" value="10">
+    </div>
+    <button type="submit" class="btn btn-block btn-primary">GET Messages</button>
+  </form>
+{% endmacro %}
