--- a/templates/base.html
+++ b/templates/base.html
@@ -27,14 +27,13 @@
    <script type="text/javascript" src="../static/custom.js"></script>
  </body>
 </html>
-
-{% macro sqs_form() %}
+{% macro sqs_form(queue_url='', max_messages='') %}
   <form action="/get_sqs_messages" method="POST">
     <div class="form-group">
       <span class="text-monospace">SQS URL</span>
-      <input id="SQS_URL" type="text" class="form-control" name="SQS_URL">
+      <input id="SQS_URL" type="text" class="form-control" name="SQS_URL" value={{queue_url}}>
       <span class="text-monospace">Max Messages To Return:</span>
-      <input id="MAX_MSG" type="text" class="form-control" name="MAX_MSG" value="10">
+      <input id="MAX_MSG" type="text" class="form-control" name="MAX_MSG" value={{max_messages}}>
     </div>
     <button type="submit" class="btn btn-block btn-primary">GET Messages</button>
   </form>
