--- a/templates/get_messages_form.html
+++ b/templates/get_messages_form.html
@@ -2,5 +2,5 @@
 {% from "base.html" import sqs_form %}
 
 {% block content %}
-  {{ sqs_form(pageData.queue_url, pageData.max_messages) }}
+  {{ sqs_form(sqsFormData) }}
 {% endblock %}
