--- a/templates/error_template.html
+++ b/templates/error_template.html
@@ -2,7 +2,7 @@
 {% from "base.html" import sqs_form %}
 
 {% block content %}
-    {{ sqs_form(pageData.queue_url, pageData.max_messages) }}
+    {{ sqs_form(sqsFormData) }}
     <br />
     <div class="alert alert-danger">
       <p>{{ error_message }}</p>
