--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,8 @@
 {% extends 'base.html' %}
+{% from "base.html" import sqs_form %}
+
 {% block content %}
-    <span class="text-monospace">SQS URL</span>
-    <form action="/get_sqs_messages" method="POST">
-        <div class="form-group">
-            <input type="text" class="form-control" name="SQS_URL">
-        </div>
-        <button type="submit" class="btn btn-block btn-primary">GET Messages</button>
-    </form>
+    {{ sqs_form(sqsFormData) }}
     <br />
     <div style="overflow: auto; max-height: 80vh">
         <div class="table-responsive">
