Increase with of the page.

--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
     {% endwith %}
      <div class="container h-100">
        <div class="row align-items-center h-100">
-           <div class="col-md-10 col-sm-12 mx-auto">
+           <div class="col-12 mx-auto">
                <div class="h-100 justify-content-center">
                    {% block content %}  {% endblock %}
                </div>
